# crypto-arbitrage-aws

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  schema.sql
deploy/lambdas/: README.md
docs/: ARCHITECTURE.md  AWS_DEPLOYMENT.md
scripts/: build_lambdas.sh
src/crypto_arbitrage_aws/: __init__.py  contracts.py  dashboard.py  database.py  kinesis.py  observability.py  paths.py  poller.py  processor.py  run_local.py  ws_collector.py
src/crypto_arbitrage_aws/lambdas/: __init__.py  config.py  init_db.py  poller.py  processor.py
src/crypto_arbitrage_aws/scripts/: __init__.py  dashboard.py  poller.py  processor.py  run_local.py  ws_collector.py
tests/: test_build_lambdas.py  test_contracts.py  test_init_db.py  test_kinesis.py  test_lambda_config.py  test_poller.py  test_processor.py  test_ws_collector.py
tools/: build_lambdas.py
